[metadata]
name = docx-live-reload
version = 0.0.4
author = Tareq Ibrahim
author_email = idtareq@gmail.com
description = Preview a Docx file in MS Word. Modify the Docx file or the extracted document.xml or style.xml and the document will reload in MS Word and show the changes.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = word, reload, docx, preview
license = MIT
url = https://github.com/idtareq/docx-live-reload

[options]
packages = docx_live_reload
install_requires =
    lxml
    pywin32

[options.entry_points]
console_scripts =
    docx-live-reload = docx_live_reload.main:main