[metadata]
name = docx-live-reload
version = 0.0.5
author = Tareq Ibrahim
author_email = idtareq@gmail.com
description = Preview a Docx file in MS Word. Modify the Docx file or the extracted document.xml or style.xml and the document will reload in MS Word and show the changes.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = word, reload, docx, preview
license = MIT
license_file = LICENSE
url = https://github.com/idtareq/docx-live-reload

[options]
python_requires = >=3.6.1
install_requires =
    lxml
    pywin32
    importlib-metadata;python_version<"3.8"

[options.entry_points]
console_scripts =
    docx-live-reload = docx_live_reload.main:main